Tue Aug 18 13:36:15 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* coulomb.c (C0sq): changed to using gsl_sf_expm1_impl instead of
 	expm1, since the latter is a GNU extension.

Mon Aug  3 14:43:16 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* bessel_amp_phase.h: undefined consts are now declared extern

Mon Jul 13 12:40:27 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gamma.c: changed all the factorial functions to take unsigned
 	int arguments, since negative values are not allowed.
	(gsl_sf_choose): fixed off by one error in call to factorial.

Sun Jul 12 13:21:41 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_sf_legendre.h, gsl_sf_poly.h, gsl_sf_pow_int.h: added
 	HAVE_INLINE around some inline definitions in the header files

	* gamma.c: implemented the natural versions of gsl_sf_lnchoose and
	gsl_sf_choose.

Wed Apr 15 21:27:48 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added the return code as the second argument of GSL_WARNING, so
 	we can filter on the error number or output a standard message for
 	each one.

1998-02-02  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (include_HEADERS): added gsl_specfunc.h so it gets
	into the distribution.
	(INCLUDES): added -I$(top_srcdir) so that bessel.c can find
	gsl_math.h