@@ -1,14 +1,11 @@
 /* Author:  G. Jungman
  * RCS:     $Id$
  */
+#include <config.h>
 #include <stdlib.h>
 #include <gsl_math.h>
 #include <gsl_errno.h>
 #include "gsl_sf_chebyshev.h"
-
-#define gslMAX(a,b) ((a) > (b) ? (a) : (b))
-#define gslMIN(a,b) ((a) < (b) ? (a) : (b))
-
 
 int gsl_sf_cheb_calc_impl(struct gsl_sf_cheb_series *, double (*)(double));
 
@@ -172,8 +169,8 @@ double gsl_sf_cheb_eval_n(const struct gsl_sf_cheb_series * cs, const int n, con
   double y  = (2.*x - cs->a - cs->b) / (cs->b - cs->a);
   double y2 = 2. * y;
 
-  int eval_order = gslMIN(n, cs->order);
-  eval_order     = gslMAX(eval_order, 0);
+  int eval_order = GSL_MIN(n, cs->order);
+  eval_order     = GSL_MAX(eval_order, 0);
   
   for(j = eval_order; j>=1; j--) {
     double temp = d;
